# jlms

./: LICENSE  PROGRESS.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build-desktop.yml  windows-build.yml
.tmp_proxy_probe/: hardware.txt  route.txt  service_order.txt
scripts/: generate_icons.py
src/: App.css  App.tsx  Overview.tsx  Policies.tsx  Profiles.tsx  Requests.tsx  Traffic.tsx  api.ts  ws.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  paths.rs  util.rs
src-tauri/src/engine/: api.rs  config.rs  manager.rs  mod.rs  profiles.rs  settings.rs  system_proxy.rs
